--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,10 +1,5 @@
 version: '3.8'
 
-networks:
-  data-eng-network:
-    name: data-eng-network
-    driver: bridge
-
 volumes:
   minio-data:
     driver: local
@@ -16,15 +11,13 @@ services:
     image: minio/minio:latest
     container_name: minio
     ports:
-      - "9000:9000"
-      - "9001:9001"
-    networks:
-      - data-eng-network
+      - "19000:9000"
+      - "19001:9001"
     volumes:
       - minio-data:/data
     environment:
       - MINIO_ROOT_USER=admin
-      - MINIO_ROOT_PASSWORD=password123
+      - MINIO_ROOT_PASSWORD=bismillahlulus
     command: server /data --console-address ":9001"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
@@ -39,9 +32,7 @@ services:
       minio:
         condition: service_healthy
     ports:
-      - "9090:9090"
-    networks:
-      - data-eng-network
+      - "19090:9090"
     environment:
       - CONSOLE_MINIO_SERVER=http://minio:9000
       - CONSOLE_PBKDF_PASSPHRASE=secret
@@ -55,8 +46,6 @@ services:
       - POSTGRES_USER=airflow
       - POSTGRES_PASSWORD=airflow
       - POSTGRES_DB=airflow
-    networks:
-      - data-eng-network
     volumes:
       - postgres-db-volume:/var/lib/postgresql/data
 
@@ -64,8 +53,7 @@ services:
     image: haggy24/airflow-custom:latest
     depends_on:
       - postgres
-    networks:
-      - data-eng-network
+
     environment:
       - AIRFLOW__CORE__EXECUTOR=LocalExecutor
       - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
@@ -73,7 +61,7 @@ services:
     command: >
       bash -c "
       airflow db migrate &&
-      airflow users create --username admin --password admin --firstname Docker --lastname Admin --role Admin --email admin@example.com
+      airflow users create --username admin --password bismillahlulus --firstname Docker --lastname Admin --role Admin --email admin@example.com
       "
 
   airflow-scheduler:
@@ -92,12 +80,8 @@ services:
       - AIRFLOW__LOGGING__ENCRYPT_S3_LOGS=False
       - MINIO_ENDPOINT=http://minio:9000
       - MINIO_ACCESS_KEY=admin
-      - MINIO_SECRET_KEY=password123
-    networks:
-      - data-eng-network
+      - MINIO_SECRET_KEY=bismillahlulus
     user: "${AIRFLOW_UID:-50000}:0"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
     command: >
       bash -c "
       airflow scheduler
@@ -110,7 +94,7 @@ services:
       airflow-scheduler:
         condition: service_started
     ports:
-      - "8080:8080"
+      - "38080:8080"
     environment:
       - AIRFLOW__API__AUTH_BACKENDS=airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session
       - AIRFLOW__CORE__EXECUTOR=LocalExecutor
@@ -119,8 +103,6 @@ services:
       - AIRFLOW__LOGGING__REMOTE_BASE_LOG_FOLDER=s3://airflow-logs
       - AIRFLOW__LOGGING__REMOTE_LOG_CONN_ID=minio_s3_conn
       - AIRFLOW__LOGGING__ENCRYPT_S3_LOGS=False
-    networks:
-      - data-eng-network
     command: >
       bash -c "
       airflow webserver
