update airflow image

--- a/Dockerfile.airflow
+++ b/Dockerfile.airflow
@@ -10,7 +10,7 @@ RUN pip install --no-cache-dir -r /tmp/requirements.txt \
 USER root
 COPY dags/ /opt/airflow/dags/
 COPY plugins/ /opt/airflow/plugins/
-COPY notebooks/ /opt/airflow/notebooks/
+COPY notebooks/ /notebooks/
 RUN chown -R airflow:root /opt/airflow/dags /opt/airflow/plugins /opt/airflow/notebooks
 
 USER airflow
